# phyton-learning

./: .env  .env-template  .gitignore  README.md  alembic.ini  data.txt  docker-compose.yml  dockerfile  init-MongoDb.py  main.py  pyproject.toml  requirements.txt  supervisord.conf
alembic/: env.py
alembic/versions/: 14baae79cdc6_add_users.py  2b22fa080b61_drop_user_table.py  41108a12eaa4_change_type_of_owner_id_column.py  432bffabb2a5_update_posts_table_and_add_foreign_key.py  625ae864b811_add_password_column_to_users.py  6787224dcc99_create_posts_table.py  7084d4dabe38_add_user_table.py  7894418f9e57_.py  94d6fd658341_added_posts_from_existing_users.py  fc2d2bc269b9_add_is_autogenerated_column_to_posts.py
app/: database.py  main.py  models.py  mongo_db.py  oauth2.py  postgres_db.py  schemas.py  scraper.py  settings.py  tasks.py  utils.py
app/discord_bot/: discord_bot.py
app/routers/: auth.py  generating_posts.py  googleAuth.py  post.py  user.py
tests/: conftest.py  test_login.py  test_posts.py  test_users.py  utils.py
