[tool.poetry]
name = "phyton-learning"
version = "0.1.0"
description = ""
authors = ["Andrew <krohmalnyj.andr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiomysql = "^0.2.0"
alembic = "^1.13.2"
annotated-types = "^0.7.0"
anyio = "^4.4.0"
async-timeout = "^4.0.3"
authlib = "^1.3.1"
bcrypt = "^4.2.0"
beautifulsoup4 = "^4.12.3"
black = "^24.8.0"
celery = "^5.4.0"
coverage = "^7.6.1"
cryptography = "^43.0.0"
email-validator = "^2.2.0"
fastapi = "^0.112.1"
flower = "^2.0.1"
httptools = "^0.6.1"
httpx = "^0.27.0"
idna = "^3.7"
passlib = "^1.7.4"
pip-tools = "^7.4.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"
pyjwt = "^2.9.0"
pymongo = "^4.8.0"
pymysql = "^1.1.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
pyyaml = "^6.0.2"
redis = "^5.0.8"
requests = "^2.32.3"
sqlalchemy = "^2.0.32"
starlette = "^0.38.2"
typing-extensions = "^4.12.2"
urllib3 = "^2.2.2"
uvicorn = "^0.30.6"
websockets = "^12.0"
celery-redbeat = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
